# pokedex-rs

./: Cargo.toml  Jenkinsfile  LICENSE  README.md  backup.jsoncmnt  nulls.json  pokemon-dex.json  tmp
data/: tr_data.json
scripts/: build_release.py
src/: backup.rs  lib.rs  main.rs  moves.json  new-moves.json  pokemon-dex-updated.json  pokemon-dex.json  tm_data.json
src/moves/: mod.rs  moves.rs
src/pokedex/: mod.rs  moves-bak.rs  moves.rs  pokedex.rs
