[package]
name = "pokedex"
description = "Get Pokemon data from the command line"
version = "0.1.7"
authors = ["Ari Vaniderstine <ari.vaniderstine@embark-studios.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/arirawr/pokedex-rs"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "pokemon", "pokeapi", "pokedex"]
maintenance = { status = "experimental" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.22"
clap = "2"
console = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
