[package]
name = "pokedex"
description = "Get Pokemon data from the command line"
version = "0.1.7"
authors = ["Ari Vaniderstine <ari.vaniderstine@embark-studios.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/dmgolembiowski/pokedex-rs"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["cli", "pokemon", "pokeapi", "pokedex"]
maintenance = { status = "experimental" }

[lib]
name = "pokedex"
path = "src/lib.rs"

[[bin]]
name = "pokedex"
path = "src/main.rs"
# required-features = ["pokedex"]


[dependencies]
reqwest = "0.9.22"
clap = { git = "https://github.com/clap-rs/clap", rev = "08b2f4" }
clap_generate = { git = "https://github.com/clap-rs/clap", rev ="08b2f4" }
console = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
lazy_static = "1.4.0"
levenshtein = "1.0.5"
owo-colors = "2.0.0"
comfy-table = "3.0.0"
serde_repr = "0.1.7"

